@@ -10,6 +10,8 @@
 
 package org.junit.jupiter.params;
 
+import static java.util.Objects.requireNonNull;
+
 import java.util.Arrays;
 import java.util.Optional;
 
@@ -45,12 +47,12 @@ class ArgumentCountValidator {
 				int consumedCount = this.declarationContext.getResolverFacade().determineConsumedArgumentCount(
 					this.arguments);
 				int totalCount = this.arguments.getTotalLength();
-				Preconditions.condition(consumedCount == totalCount, () -> String.format(
-					"Configuration error: @%s consumes %s %s but there %s %s %s provided.%nNote: the provided arguments were %s",
-					this.declarationContext.getAnnotationName(), consumedCount,
-					pluralize(consumedCount, "parameter", "parameters"), pluralize(totalCount, "was", "were"),
-					totalCount, pluralize(totalCount, "argument", "arguments"),
-					Arrays.toString(this.arguments.getAllPayloads())));
+				Preconditions.condition(consumedCount == totalCount,
+					() -> "Configuration error: @%s consumes %s %s but there %s %s %s provided.%nNote: the provided arguments were %s".formatted(
+						this.declarationContext.getAnnotationName(), consumedCount,
+						pluralize(consumedCount, "parameter", "parameters"), pluralize(totalCount, "was", "were"),
+						totalCount, pluralize(totalCount, "argument", "arguments"),
+						Arrays.toString(this.arguments.getAllPayloads())));
 				break;
 			default:
 				throw new ExtensionConfigurationException(
@@ -72,7 +74,7 @@ class ArgumentCountValidator {
 		String key = ARGUMENT_COUNT_VALIDATION_KEY;
 		ArgumentCountValidationMode fallback = ArgumentCountValidationMode.NONE;
 		ExtensionContext.Store store = getStore(extensionContext);
-		return store.getOrComputeIfAbsent(key, __ -> {
+		return requireNonNull(store.getOrComputeIfAbsent(key, __ -> {
 			Optional<String> optionalConfigValue = extensionContext.getConfigurationParameter(key);
 			if (optionalConfigValue.isPresent()) {
 				String configValue = optionalConfigValue.get();
@@ -80,9 +82,9 @@ class ArgumentCountValidator {
 					ArgumentCountValidationMode.values()).filter(
 						mode -> mode.name().equalsIgnoreCase(configValue)).findFirst();
 				if (enumValue.isPresent()) {
-					logger.config(() -> String.format(
-						"Using ArgumentCountValidationMode '%s' set via the '%s' configuration parameter.",
-						enumValue.get().name(), key));
+					logger.config(
+						() -> "Using ArgumentCountValidationMode '%s' set via the '%s' configuration parameter.".formatted(
+							enumValue.get().name(), key));
 					return enumValue.get();
 				}
 				else {
@@ -96,7 +98,7 @@ class ArgumentCountValidator {
 			else {
 				return fallback;
 			}
-		}, ArgumentCountValidationMode.class);
+		}, ArgumentCountValidationMode.class));
 	}
 
 	private static String pluralize(int count, String singular, String plural) {
