@@ -10,6 +10,7 @@
 
 package org.junit.platform.suite.engine;
 
+import static java.util.Objects.requireNonNull;
 import static java.util.function.Predicate.isEqual;
 import static java.util.stream.Collectors.joining;
 import static org.junit.platform.commons.support.AnnotationSupport.findAnnotation;
@@ -21,6 +22,7 @@ import java.util.List;
 import java.util.function.BiFunction;
 import java.util.function.Predicate;
 
+import org.jspecify.annotations.Nullable;
 import org.junit.platform.commons.JUnitException;
 import org.junit.platform.commons.support.ReflectionSupport;
 import org.junit.platform.commons.util.Preconditions;
@@ -71,7 +73,10 @@ final class SuiteTestDescriptor extends AbstractTestDescriptor {
 	private final Class<?> suiteClass;
 	private final LifecycleMethods lifecycleMethods;
 
+	@Nullable
 	private LauncherDiscoveryResult launcherDiscoveryResult;
+
+	@Nullable
 	private SuiteLauncher launcher;
 
 	SuiteTestDescriptor(UniqueId id, Class<?> suiteClass, ConfigurationParameters configurationParameters,
@@ -90,7 +95,7 @@ final class SuiteTestDescriptor extends AbstractTestDescriptor {
 		// @formatter:off
 		return findAnnotation(suiteClass, Suite.class)
 				.map(Suite::failIfNoTests)
-				.orElseThrow(() -> new JUnitException(String.format("Suite [%s] was not annotated with @Suite", suiteClass.getName())));
+				.orElseThrow(() -> new JUnitException("Suite [%s] was not annotated with @Suite".formatted(suiteClass.getName())));
 		// @formatter:on
 	}
 
@@ -174,7 +179,7 @@ final class SuiteTestDescriptor extends AbstractTestDescriptor {
 		}
 	}
 
-	private TestExecutionSummary executeTests(EngineExecutionListener parentEngineExecutionListener,
+	private @Nullable TestExecutionSummary executeTests(EngineExecutionListener parentEngineExecutionListener,
 			NamespacedHierarchicalStore<Namespace> requestLevelStore, ThrowableCollector throwableCollector) {
 		if (throwableCollector.isNotEmpty()) {
 			return null;
@@ -183,9 +188,9 @@ final class SuiteTestDescriptor extends AbstractTestDescriptor {
 		// #2838: The discovery result from a suite may have been filtered by
 		// post discovery filters from the launcher. The discovery result should
 		// be pruned accordingly.
-		LauncherDiscoveryResult discoveryResult = this.launcherDiscoveryResult.withRetainedEngines(
+		LauncherDiscoveryResult discoveryResult = requireNonNull(this.launcherDiscoveryResult).withRetainedEngines(
 			getChildren()::contains);
-		return launcher.execute(discoveryResult, parentEngineExecutionListener, requestLevelStore);
+		return requireNonNull(launcher).execute(discoveryResult, parentEngineExecutionListener, requestLevelStore);
 	}
 
 	private void executeAfterSuiteMethods(ThrowableCollector throwableCollector) {
@@ -194,12 +199,13 @@ final class SuiteTestDescriptor extends AbstractTestDescriptor {
 		}
 	}
 
-	private TestExecutionResult computeTestExecutionResult(TestExecutionSummary summary,
+	private TestExecutionResult computeTestExecutionResult(@Nullable TestExecutionSummary summary,
 			ThrowableCollector throwableCollector) {
-		if (throwableCollector.isNotEmpty()) {
-			return TestExecutionResult.failed(throwableCollector.getThrowable());
+		var throwable = throwableCollector.getThrowable();
+		if (throwable != null) {
+			return TestExecutionResult.failed(throwable);
 		}
-		if (failIfNoTests && summary.getTestsFoundCount() == 0) {
+		if (failIfNoTests && requireNonNull(summary).getTestsFoundCount() == 0) {
 			return TestExecutionResult.failed(new NoTestsDiscoveredException(suiteClass));
 		}
 		return TestExecutionResult.successful();
@@ -224,7 +230,9 @@ final class SuiteTestDescriptor extends AbstractTestDescriptor {
 		}
 	}
 
-	private static class DiscoveryIssueForwardingListener implements LauncherDiscoveryListener {
+	private record DiscoveryIssueForwardingListener(EngineDiscoveryListener discoveryListener,
+			BiFunction<UniqueId, DiscoveryIssue, DiscoveryIssue> issueTransformer)
+			implements LauncherDiscoveryListener {
 
 		private static final Predicate<Segment> SUITE_SEGMENTS = where(Segment::getType, isEqual(SEGMENT_TYPE));
 
@@ -246,17 +254,8 @@ final class SuiteTestDescriptor extends AbstractTestDescriptor {
 					if (message.endsWith(".")) {
 						message = message.substring(0, message.length() - 1);
 					}
-					return String.format("[%s] %s (via @Suite %s).", engineId, message, suitePath);
+					return "[%s] %s (via @Suite %s).".formatted(engineId, message, suitePath);
 				}));
-		}
-
-		private final EngineDiscoveryListener discoveryListener;
-		private final BiFunction<UniqueId, DiscoveryIssue, DiscoveryIssue> issueTransformer;
-
-		private DiscoveryIssueForwardingListener(EngineDiscoveryListener discoveryListener,
-				BiFunction<UniqueId, DiscoveryIssue, DiscoveryIssue> issueTransformer) {
-			this.discoveryListener = discoveryListener;
-			this.issueTransformer = issueTransformer;
 		}
 
 		@Override
