@@ -20,6 +20,7 @@ import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTimeoutPreemptively;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -30,7 +31,6 @@ import static org.junit.platform.commons.util.ReflectionUtils.findMethod;
 import static org.junit.platform.commons.util.ReflectionUtils.findMethods;
 import static org.junit.platform.commons.util.ReflectionUtils.invokeMethod;
 import static org.junit.platform.commons.util.ReflectionUtils.isWideningConversion;
-import static org.junit.platform.commons.util.ReflectionUtils.readFieldValue;
 import static org.junit.platform.commons.util.ReflectionUtils.readFieldValues;
 import static org.junit.platform.commons.util.ReflectionUtils.tryToReadFieldValue;
 
@@ -60,6 +60,7 @@ import java.util.logging.LogRecord;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
+import org.jspecify.annotations.Nullable;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.fixtures.TrackLogRecords;
@@ -114,6 +115,7 @@ class ReflectionUtilsTests {
 			assertFalse(ReflectionUtils.returnsPrimitiveVoid(clazz.getDeclaredMethod("methodReturningPrimitive")));
 		}
 
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void getAllAssignmentCompatibleClassesWithNullClass() {
 			assertThrows(PreconditionViolationException.class,
@@ -128,6 +130,7 @@ class ReflectionUtilsTests {
 			assertTrue(superclasses.stream().allMatch(clazz -> clazz.isAssignableFrom(B.class)));
 		}
 
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void newInstance() {
 			// @formatter:off
@@ -212,6 +215,19 @@ class ReflectionUtilsTests {
 		}
 
 		@Test
+		void getWrapperType() {
+			assertEquals(Boolean.class, ReflectionUtils.getWrapperType(boolean.class));
+			assertEquals(Byte.class, ReflectionUtils.getWrapperType(byte.class));
+			assertEquals(Character.class, ReflectionUtils.getWrapperType(char.class));
+			assertEquals(Short.class, ReflectionUtils.getWrapperType(short.class));
+			assertEquals(Integer.class, ReflectionUtils.getWrapperType(int.class));
+			assertEquals(Long.class, ReflectionUtils.getWrapperType(long.class));
+			assertEquals(Float.class, ReflectionUtils.getWrapperType(float.class));
+			assertEquals(Double.class, ReflectionUtils.getWrapperType(double.class));
+			assertNull(ReflectionUtils.getWrapperType(Object.class));
+		}
+
+		@Test
 		void getAllClasspathRootDirectories(@TempDir Path tempDirectory) throws Exception {
 			var root1 = tempDirectory.resolve("root1").toAbsolutePath();
 			var root2 = tempDirectory.resolve("root2").toAbsolutePath();
@@ -234,6 +250,7 @@ class ReflectionUtilsTests {
 			}
 		}
 
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void getDeclaredConstructorPreconditions() {
 			// @formatter:off
@@ -532,6 +549,7 @@ class ReflectionUtilsTests {
 	@Nested
 	class IsClassAssignableToClassTests {
 
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void isAssignableToForNullSourceType() {
 			assertThatExceptionOfType(PreconditionViolationException.class)//
@@ -546,6 +564,7 @@ class ReflectionUtilsTests {
 					.withMessage("source type must not be a primitive type");
 		}
 
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void isAssignableToForNullTargetType() {
 			assertThatExceptionOfType(PreconditionViolationException.class)//
@@ -602,6 +621,7 @@ class ReflectionUtilsTests {
 	@Nested
 	class IsObjectAssignableToClassTests {
 
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void isAssignableToForNullClass() {
 			assertThrows(PreconditionViolationException.class,
@@ -667,6 +687,7 @@ class ReflectionUtilsTests {
 	@Nested
 	class MethodInvocationTests {
 
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void invokeMethodPreconditions() {
 			// @formatter:off
@@ -733,6 +754,7 @@ class ReflectionUtilsTests {
 	@Nested
 	class ResourceLoadingTests {
 
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void tryToGetResourcePreconditions() {
 			assertThrows(PreconditionViolationException.class, () -> ReflectionUtils.tryToGetResources(""));
@@ -774,6 +796,7 @@ class ReflectionUtilsTests {
 	@Nested
 	class ClassLoadingTests {
 
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void tryToLoadClassPreconditions() {
 			assertThrows(PreconditionViolationException.class, () -> ReflectionUtils.tryToLoadClass(null));
@@ -783,12 +806,6 @@ class ReflectionUtilsTests {
 			assertThrows(PreconditionViolationException.class, () -> ReflectionUtils.tryToLoadClass(null, null));
 			assertThrows(PreconditionViolationException.class,
 				() -> ReflectionUtils.tryToLoadClass(getClass().getName(), null));
-		}
-
-		@Test
-		@SuppressWarnings("deprecation")
-		void loadClassWhenClassNotFoundException() {
-			assertThat(ReflectionUtils.loadClass("foo.bar.EnigmaClassThatDoesNotExist")).isEmpty();
 		}
 
 		@Test
@@ -809,13 +826,6 @@ class ReflectionUtilsTests {
 			// test to pass on CI servers with limited resources.
 			assertTimeoutPreemptively(ofMillis(500), () -> assertThrows(ClassNotFoundException.class,
 				() -> ReflectionUtils.tryToLoadClass(className).get()));
-		}
-
-		@Test
-		@SuppressWarnings("deprecation")
-		void loadClass() {
-			var optional = ReflectionUtils.loadClass(Integer.class.getName());
-			assertThat(optional).contains(Integer.class);
 		}
 
 		@Test
@@ -953,6 +963,7 @@ class ReflectionUtilsTests {
 	@Nested
 	class FullyQualifiedMethodNameTests {
 
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void getFullyQualifiedMethodNamePreconditions() {
 			// @formatter:off
@@ -988,6 +999,7 @@ class ReflectionUtilsTests {
 			// @formatter:on
 		}
 
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void parseFullyQualifiedMethodNamePreconditions() {
 			// @formatter:off
@@ -1027,6 +1039,7 @@ class ReflectionUtilsTests {
 	@Nested
 	class NestedClassTests {
 
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void findNestedClassesPreconditions() {
 			// @formatter:off
@@ -1036,6 +1049,7 @@ class ReflectionUtilsTests {
 			// @formatter:on
 		}
 
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void isNestedClassPresentPreconditions() {
 			// @formatter:off
@@ -1149,7 +1163,7 @@ class ReflectionUtilsTests {
 			assertThatExceptionOfType(JUnitException.class)//
 					.as("expected cycle from %s to %s", from.getSimpleName(), to.getSimpleName())//
 					.isThrownBy(() -> findNestedClasses(start))//
-					.withMessageMatching(String.format("Detected cycle in inner class hierarchy between .+%s and .+%s",
+					.withMessageMatching("Detected cycle in inner class hierarchy between .+%s and .+%s".formatted(
 						from.getSimpleName(), to.getSimpleName()));
 		}
 
@@ -1213,6 +1227,7 @@ class ReflectionUtilsTests {
 	@Nested
 	class MethodUtilitiesTests {
 
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void tryToGetMethodPreconditions() {
 			assertThrows(PreconditionViolationException.class, () -> ReflectionUtils.tryToGetMethod(null, null));
@@ -1237,6 +1252,7 @@ class ReflectionUtilsTests {
 			assertThat(ReflectionUtils.tryToGetMethod(Object.class, "clone", int.class).toOptional()).isEmpty();
 		}
 
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void isMethodPresentPreconditions() {
 			assertThrows(PreconditionViolationException.class, () -> ReflectionUtils.isMethodPresent(null, m -> true));
@@ -1258,6 +1274,7 @@ class ReflectionUtilsTests {
 	@Nested
 	class FindMethodTests {
 
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void findMethodByParameterTypesPreconditions() {
 			// @formatter:off
@@ -1446,6 +1463,7 @@ class ReflectionUtilsTests {
 	@Nested
 	class FindMethodsTests {
 
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void findMethodsPreconditions() {
 			// @formatter:off
@@ -1768,7 +1786,7 @@ class ReflectionUtilsTests {
 		}
 
 		@Test
-		void findMethodsReturnsAllOverloadedMethodsInGenericTypeHieararchy() {
+		void findMethodsReturnsAllOverloadedMethodsInGenericTypeHierarchy() {
 			Class<?> clazz = InterfaceWithGenericDefaultMethodImpl.class;
 
 			// Search for all foo(*) methods.
@@ -1799,7 +1817,7 @@ class ReflectionUtilsTests {
 		private static List<String> signaturesOf(List<Method> methods) {
 			// @formatter:off
 			return methods.stream()
-					.map(m -> String.format("%s(%s)", m.getName(), ClassUtils.nullSafeToString(m.getParameterTypes())))
+					.map(m -> "%s(%s)".formatted(m.getName(), ClassUtils.nullSafeToString(m.getParameterTypes())))
 					.toList();
 			// @formatter:on
 		}
@@ -1921,26 +1939,13 @@ class ReflectionUtilsTests {
 	@Nested
 	class ReadFieldTests {
 
-		@Test
-		@SuppressWarnings("deprecation")
-		void readFieldValueOfNonexistentStaticField() {
-			assertThat(readFieldValue(MyClass.class, "doesNotExist", null)).isNotPresent();
-			assertThat(readFieldValue(MySubClass.class, "staticField", null)).isNotPresent();
-		}
-
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void tryToReadFieldValueOfNonexistentStaticField() {
 			assertThrows(NoSuchFieldException.class,
 				() -> tryToReadFieldValue(MyClass.class, "doesNotExist", null).get());
 			assertThrows(NoSuchFieldException.class,
 				() -> tryToReadFieldValue(MySubClass.class, "staticField", null).get());
-		}
-
-		@Test
-		@SuppressWarnings("deprecation")
-		void readFieldValueOfNonexistentInstanceField() {
-			assertThat(readFieldValue(MyClass.class, "doesNotExist", new MyClass(42))).isNotPresent();
-			assertThat(readFieldValue(MyClass.class, "doesNotExist", new MySubClass(42))).isNotPresent();
 		}
 
 		@Test
@@ -1951,16 +1956,7 @@ class ReflectionUtilsTests {
 				() -> tryToReadFieldValue(MyClass.class, "doesNotExist", new MySubClass(42)).get());
 		}
 
-		@Test
-		@SuppressWarnings("deprecation")
-		void readFieldValueOfExistingStaticField() throws Exception {
-			assertThat(readFieldValue(MyClass.class, "staticField", null)).contains(42);
-
-			var field = MyClass.class.getDeclaredField("staticField");
-			assertThat(readFieldValue(field)).contains(42);
-			assertThat(readFieldValue(field, null)).contains(42);
-		}
-
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void tryToReadFieldValueOfExistingStaticField() throws Exception {
 			assertThat(tryToReadFieldValue(MyClass.class, "staticField", null).get()).isEqualTo(42);
@@ -1971,33 +1967,18 @@ class ReflectionUtilsTests {
 		}
 
 		@Test
-		@SuppressWarnings("deprecation")
-		void readFieldValueOfExistingInstanceField() throws Exception {
-			var instance = new MyClass(42);
-			assertThat(readFieldValue(MyClass.class, "instanceField", instance)).contains(42);
-
-			var field = MyClass.class.getDeclaredField("instanceField");
-			assertThat(readFieldValue(field, instance)).contains(42);
-		}
-
-		@Test
-		@SuppressWarnings("deprecation")
-		void attemptToReadFieldValueOfExistingInstanceFieldAsStaticField() throws Exception {
-			var field = MyClass.class.getDeclaredField("instanceField");
-			Exception exception = assertThrows(PreconditionViolationException.class, () -> readFieldValue(field, null));
-			assertThat(exception)//
-					.hasMessageStartingWith("Cannot read non-static field")//
-					.hasMessageEndingWith("on a null instance.");
-		}
-
-		@Test
 		void tryToReadFieldValueOfExistingInstanceField() throws Exception {
 			var instance = new MyClass(42);
 			assertThat(tryToReadFieldValue(MyClass.class, "instanceField", instance).get()).isEqualTo(42);
 
 			var field = MyClass.class.getDeclaredField("instanceField");
-			assertThat(tryToReadFieldValue(field, instance).get()).isEqualTo(42);
-			assertThrows(PreconditionViolationException.class, () -> tryToReadFieldValue(field, null).get());
+			assertThat(tryToReadFieldValue(field, instance).getNonNull()).isEqualTo(42);
+
+			var exception = assertThrows(PreconditionViolationException.class,
+				() -> tryToReadFieldValue(field, null).get());
+			assertThat(exception)//
+					.hasMessageStartingWith("Cannot read non-static field")//
+					.hasMessageEndingWith("on a null instance.");
 		}
 
 	}
@@ -2027,6 +2008,7 @@ class ReflectionUtilsTests {
 			assertThat(fields).containsExactly(nonStaticField);
 		}
 
+		@SuppressWarnings({ "DataFlowIssue", "NullAway" })
 		@Test
 		void readFieldValuesPreconditions() {
 			List<Field> fields = new ArrayList<>();
@@ -2058,7 +2040,7 @@ class ReflectionUtilsTests {
 		 * @since 1.11
 		 */
 		@Test
-		void readFieldValuesFromInteracesAndClassesInTypeHierarchy() {
+		void readFieldValuesFromInterfacesAndClassesInTypeHierarchy() {
 			var fields = findFields(InterfaceWithField.class, ReflectionUtils::isStatic, TOP_DOWN);
 			var values = readFieldValues(fields, null);
 			assertThat(values).containsOnly("ifc");
@@ -2143,6 +2125,7 @@ class ReflectionUtilsTests {
 			@SuppressWarnings("unused")
 			private final String privateStringField = "enigma";
 
+			@Nullable
 			final String nullStringField = null;
 
 			public final int integerField = 42;
